src/snapshots/ubergraph__tests__example_2.snap
---
source: src/lib.rs
expression: dot_str
---
digraph {
    0 [ label = "Left(\"v1\")" ]
    1 [ label = "Left(\"v2\")" ]
    2 [ label = "Left(\"v3\")" ]
    3 [ label = "Right(\"e1\")" ]
    4 [ label = "Right(\"e2\")" ]
    5 [ label = "Right(\"e3\")" ]
    6 [ label = "Right(\"e4\")" ]
    7 [ label = "Right(\"e5\")" ]
    0 -> 3 [ label = "()" ]
    0 -> 4 [ label = "()" ]
    2 -> 4 [ label = "()" ]
    0 -> 5 [ label = "()" ]
    2 -> 5 [ label = "()" ]
    3 -> 5 [ label = "()" ]
    1 -> 6 [ label = "()" ]
    4 -> 6 [ label = "()" ]
    0 -> 7 [ label = "()" ]
    6 -> 7 [ label = "()" ]
}

