src/snapshots/ubergraph__tests__hypergraph_example_1.snap
---
source: src/lib.rs
expression: dot_str
---
digraph {
    0 [ label = "Left(\"v1\")" ]
    1 [ label = "Left(\"v2\")" ]
    2 [ label = "Left(\"v3\")" ]
    3 [ label = "Left(\"v4\")" ]
    4 [ label = "Left(\"v5\")" ]
    5 [ label = "Right(\"e1\")" ]
    6 [ label = "Right(\"e2\")" ]
    7 [ label = "Right(\"e3\")" ]
    8 [ label = "Right(\"e4\")" ]
    0 -> 5 [ label = "()" ]
    0 -> 6 [ label = "()" ]
    2 -> 6 [ label = "()" ]
    1 -> 7 [ label = "()" ]
    2 -> 7 [ label = "()" ]
    0 -> 8 [ label = "()" ]
    2 -> 8 [ label = "()" ]
    4 -> 8 [ label = "()" ]
}

