src/snapshots/ubergraph__tests__ubergraph_to_hypergraph_to_levi_graph.snap
---
source: src/lib.rs
expression: dot_str
---
digraph {
    0 [ label = "Left(\"v1\")" ]
    1 [ label = "Left(\"v2\")" ]
    2 [ label = "Left(\"v3\")" ]
    3 [ label = "Right(\"e1\")" ]
    4 [ label = "Right(\"e2\")" ]
    5 [ label = "Right(\"e3\")" ]
    6 [ label = "Right(\"e4\")" ]
    7 [ label = "Right(\"e5\")" ]
    0 -> 3 [ label = "()" ]
    0 -> 4 [ label = "()" ]
    2 -> 4 [ label = "()" ]
    0 -> 5 [ label = "()" ]
    2 -> 5 [ label = "()" ]
    0 -> 6 [ label = "()" ]
    1 -> 6 [ label = "()" ]
    2 -> 6 [ label = "()" ]
    0 -> 7 [ label = "()" ]
    1 -> 7 [ label = "()" ]
    2 -> 7 [ label = "()" ]
}

